docs: add APA 7th user manual (LaTeX/PDF) and install Playwright
- Add LaTeX user manual covering all app features for end users
- Use APA 7th format, letter size, black link styling
- Add Playwright as dev dependency for upcoming demo video
- Add LaTeX build artifacts to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -27,5 +27,28 @@ dist-ssr
 *.sln
 *.sw?
 
+# LaTeX build artifacts
+*.aux
+*.lof
+*.lot
+*.fls
+*.out
+*.toc
+*.fmt
+*.fot
+*.cb
+*.cb2
+*.lb
+*.bbl
+*.blg
+*.bcf
+*.run.xml
+*.fdb_latexmk
+*.synctex
+*.synctex(busy)
+*.synctex.gz
+*.synctex.gz(busy)
+*.pdfsync
+
 # Others
 changes.txt
